# KR_4

./: README.md  classes.py  main.py  pyproject.toml  utils.py  vacancy_list.json
