[tool.poetry]
name = "kr-4"
version = "0.1.0"
description = ""
authors = ["tychkov.vv <tyvl@yandex.ru>"]
readme = "README.md"
packages = [{include = "kr_4"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.2"
types-requests = "^2.28.11.17"


[tool.poetry.group.dev.dependencies]
mypy = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
